syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.notification.config.service.v1;

import "org/hypertrace/notification/config/service/v1/notification_channel.proto";

service NotificationChannelConfigService {
  rpc CreateNotificationChannel(CreateNotificationChannelRequest) returns (CreateNotificationChannelResponse) {}
  rpc UpdateNotificationChannel(UpdateNotificationChannelRequest) returns (UpdateNotificationChannelResponse) {}
  rpc GetAllNotificationChannels(GetAllNotificationChannelsRequest) returns (GetAllNotificationChannelsResponse) {}
  rpc DeleteNotificationChannel(DeleteNotificationChannelRequest) returns (DeleteNotificationChannelResponse) {}
  rpc GetNotificationChannel(GetNotificationChannelRequest) returns (GetNotificationChannelResponse) {}
}

message CreateNotificationChannelRequest {
  NotificationChannelMutableData notification_channel_mutable_data = 1;
}

message CreateNotificationChannelResponse {
  NotificationChannel notification_channel = 1;
}

message UpdateNotificationChannelRequest {
  string id = 1;
  NotificationChannelMutableData notification_channel_mutable_data = 2;
}

message UpdateNotificationChannelResponse {
  NotificationChannel notification_channel = 1;
}

message GetAllNotificationChannelsRequest {}

message GetAllNotificationChannelsResponse {
  repeated NotificationChannel notification_channels = 1;
}

message DeleteNotificationChannelRequest {
  string notification_channel_id = 1;
}

message DeleteNotificationChannelResponse {}

message GetNotificationChannelRequest {
  string notification_channel_id = 1;
}

message GetNotificationChannelResponse {
  NotificationChannel notification_channel = 1;
}
