syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.notification.config.service.v1;

message NewNotificationRule {
  string rule_name = 1;
  string description = 2;
  string environment = 3;

  string event_condition_id = 4;
  string event_condition_type = 5;

  string channel_id = 6;
  string rate_limit_interval_duration = 7;
}

message NotificationRule {
  string id = 1;
  string rule_name = 2;
  string description = 3;
  string environment = 4;

  string event_condition_id = 5;
  string event_condition_type = 6;

  string channel_id = 7;
  string rate_limit_interval_duration = 8;
}
